--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -26,7 +26,7 @@
         <div class="mobile-contact">
           <a href="tel:+387603090567" class="mobile-contact-link">
             <i class="fas fa-phone-alt"></i>
-            <span appTranslate="call_us">Call Us</span>: +387 60 309 0567
+            <span appTranslate="call_us">Call Us</span> +387 60 309 0567
           </a>
         </div>
       </nav>
