--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -140,7 +140,8 @@
         background-color: $primary-blue;
         bottom: -4px;
         left: 0;
-        transition: $transition-base;
+        transition: width 0.3s cubic-bezier(0.65, 0, 0.35, 1);
+        transform-origin: left;
       }
       
       &:hover, &:focus {
@@ -148,6 +149,17 @@
         
         &::after {
           width: 100%;
+        }
+      }
+      
+      &.active {
+        color: $primary-blue;
+        font-weight: 600;
+        
+        &::after {
+          width: 100%;
+          height: 3px;
+          animation: underlineAnimation 0.5s cubic-bezier(0.65, 0, 0.35, 1) forwards;
         }
       }
     }
@@ -314,6 +326,11 @@ body.no-scroll {
         &::after {
           left: auto;
           right: 0;
+          transform-origin: right;
+        }
+        
+        &.active::after {
+          animation: underlineAnimationRTL 0.5s cubic-bezier(0.65, 0, 0.35, 1) forwards;
         }
       }
     }
@@ -328,5 +345,20 @@ body.no-scroll {
     .mobile-contact-link {
       flex-direction: row-reverse;
     }
+  }
+}
+
+@keyframes underlineAnimationRTL {
+  0% {
+    width: 0;
+    opacity: 0.8;
+    right: 0;
+    left: auto;
+  }
+  100% {
+    width: 100%;
+    opacity: 1;
+    right: 0;
+    left: auto;
   }
 }
