--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -13,7 +13,7 @@
           </div>
           <div class="contact-details">
             <h3 appTranslate="our_location">Our Location</h3>
-            <p>Lakeside Avenue 123<br>Lake District, Country</p>
+            <p>Ostrožac 212<br>Ostrožac, Bosnia i Hercegovina</p>
           </div>
         </div>
         
@@ -23,8 +23,7 @@
           </div>
           <div class="contact-details">
             <h3 appTranslate="phone">Phone</h3>
-            <p>+1 (234) 567-8900</p>
-            <p>+1 (234) 567-8901</p>
+            <p>+387 60 33 07 659</p>
           </div>
         </div>
         
