--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -10,20 +10,20 @@
         <div class="footer-section">
           <h3 appTranslate="quick_links">Quick Links</h3>
           <ul>
-            <li><a href="#home" appTranslate="home">Home</a></li>
-            <li><a href="#about" appTranslate="about">About</a></li>
-            <li><a href="#services" appTranslate="services">Services</a></li>
-            <li><a href="#reviews" appTranslate="reviews">Reviews</a></li>
-            <li><a href="#contact" appTranslate="contact">Contact</a></li>
+            <li><a href="#home" (click)="scrollToSection('home', $event)" appTranslate="home">Home</a></li>
+            <li><a href="#about" (click)="scrollToSection('about', $event)" appTranslate="about">About</a></li>
+            <li><a href="#services" (click)="scrollToSection('services', $event)" appTranslate="services">Services</a></li>
+            <li><a href="#reviews" (click)="scrollToSection('reviews', $event)" appTranslate="reviews">Reviews</a></li>
+            <li><a href="#contact" (click)="scrollToSection('contact', $event)" appTranslate="contact">Contact</a></li>
           </ul>
         </div>
         
         <div class="footer-section">
           <h3 appTranslate="our_services">Our Services</h3>
           <ul>
-            <li><a href="#apartments" appTranslate="luxury_apartments">Luxury Apartments</a></li>
-            <li><a href="#cafe" appTranslate="cozy_cafe">Lakeside Café</a></li>
-            <li><a href="#rafts" appTranslate="raft_rentals">Raft Rentals</a></li>
+            <li><a href="#apartments" (click)="scrollToSection('services', $event)" appTranslate="luxury_apartments">Luxury Apartments</a></li>
+            <li><a href="#cafe" (click)="scrollToSection('services', $event)" appTranslate="cozy_cafe">Lakeside Café</a></li>
+            <li><a href="#rafts" (click)="scrollToSection('services', $event)" appTranslate="raft_rentals">Raft Rentals</a></li>
           </ul>
         </div>
         
