Update contact component and translations for improved localization
- Modified contact.component.html to separate address and country into distinct translatable elements.
- Added new translation entries for 'our_address' and 'country' in translations.ts to support multiple languages, ensuring accurate representation of location details.

--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -13,7 +13,8 @@
           </div>
           <div class="contact-details">
             <h3 appTranslate="our_location">Our Location</h3>
-            <p>Ostrožac 212<br>Ostrožac, Bosnia i Hercegovina</p>
+            <p appTranslate="our_address">Ostrožac 212</p>
+            <p appTranslate="country">Ostrožac, Bosnia and Herzegovina</p>
           </div>
         </div>
         
