--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -50,8 +50,8 @@
     <div class="footer-bottom">
       <p><span appTranslate="copyright" [translateParams]="{currentYear: currentYear.toString()}">© 2024 Lakeside Luxury. All rights reserved.</span></p>
       <div class="footer-bottom-links">
-        <a href="#" appTranslate="privacy_policy">Privacy Policy</a>
-        <a href="#" appTranslate="terms_of_service">Terms of Service</a>
+        <a href="#" (click)="$event.preventDefault()" appTranslate="privacy_policy">Privacy Policy</a>
+        <a href="#" (click)="$event.preventDefault()" appTranslate="terms_of_service">Terms of Service</a>
       </div>
     </div>
   </div>
