--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="header-content">
       <div class="logo">
-        <a href="#home">
+        <a href="#home" (click)="setActiveSection('home', $event)">
           <h1>Lakeside<span>Luxury</span></h1>
         </a>
       </div>
