--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -9,10 +9,10 @@
       </div>
       
       <button class="mobile-menu-btn" (click)="toggleMenu()" aria-label="Toggle menu">
-        <i class="fas" [ngClass]="isMenuOpen ? 'fa-times' : 'fa-bars'"></i>
+        <i class="fas" [ngClass]="isMenuOpen() ? 'fa-times' : 'fa-bars'"></i>
       </button>
       
-      <nav class="nav" [ngClass]="{'nav-active': isMenuOpen}">
+      <nav class="nav" [ngClass]="{'nav-active': isMenuOpen()}">
         <ul class="nav-list">
           <li><a href="#home" [class.active]="activeSection === 'home'" (click)="setActiveSection('home', $event)" appTranslate="home">Home</a></li>
           <li><a href="#about" [class.active]="activeSection === 'about'" (click)="setActiveSection('about', $event)" appTranslate="about">About</a></li>
