--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -240,12 +240,13 @@
   }
 }
 
-html.no-scroll,
 body.no-scroll {
-  overflow: hidden;
-  height: 100%;
   position: fixed;
   width: 100%;
+  height: 100%;
+  overflow: hidden;
+  top: 0;
+  left: 0;
 }
 
 @keyframes slideDown {
