--- a/src/app/shared/styles/_utilities.scss
+++ b/src/app/shared/styles/_utilities.scss
@@ -124,13 +124,13 @@
 }
 
 .section-dark {
-  background-color: v.$deep-blue;
-  color: v.$white;
+  background-color: v.$primary-green;
+  color: v.$gold;
 }
 
 .section-accent {
-  background-color: v.$accent-teal;
-  color: v.$white;
+  background-color: v.$accent-green;
+  color: v.$gold;
 }
 
 // Animations
