--- a/src/app/components/hero/hero.component.scss
+++ b/src/app/components/hero/hero.component.scss
@@ -48,8 +48,8 @@
   height: 100%;
   background: linear-gradient(
     to bottom,
-    rgba($deep-blue, 0.7) 0%,
-    rgba($deep-blue, 0.5) 100%
+    rgba($white, 0.7) 0%,
+    rgba($white, 0.5) 100%
   );
   z-index: 1;
 }
