--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,8 +4,7 @@
 @use './app/shared/styles/base' as *;
 @use './app/shared/styles/utilities' as *;
 
-/* Google Fonts Import */
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Poppins:wght@300;400;500;600;700&family=Tajawal:wght@300;400;500;700&display=swap');
+/* Google Fonts are loaded in index.html for better performance and Netlify compatibility */
 
 /* You can add global styles to this file, and also import other style files */
 
