Update email address

--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -34,8 +34,7 @@
           </div>
           <div class="contact-details">
             <h3 appTranslate="email">Email</h3>
-            <p>info&#64;lakesideluxury.com</p>
-            <p>bookings&#64;lakesideluxury.com</p>
+            <p>lakesideluxuryapartment&#64;gmail.com</p>
           </div>
         </div>
         
